--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,10 @@
-<h1>Sample App</h1>
-<p>
-  This is the home page for the
-  <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<div class="p-5 mb-4 bg-light rounded-3 text-center">
+  <div class="container py-5">
+    <h1 class="display-5 fw-bold">Welcome to the Sample App</h1>
+    <p class="col-md-8 fs-4 mx-auto text-center">
+      This is the home page for the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
+    </p>
+    <%= link_to "Sign up now!", "#", class: "btn btn-primary btn-lg" %>
+</div>
+
+<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"), "https://rubyonrails.org/" %>
