--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,26 +23,11 @@
   </head>
 
   <body>
-    <header class="fixed-top">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <%= link_to "sample app", '#', id: "logo", class: "navbar-brand" %>
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <%= link_to "Home", '#', class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Help", '#', class: "nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to "Log in", '#', class: "nav-link" %>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    </header>
+    <%= render 'layouts/header' %>
     <div class="container">
       <%= yield %>
+
     </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
