--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,13 @@
 <header class="fixed-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <%= link_to "sample app", '#', id: "logo", class: "navbar-brand" %>
+      <%= link_to "sample app", root_path, id: "logo", class: "navbar-brand" %>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <%= link_to "Home", '#', class: "nav-link" %>
+          <%= link_to "Home", root_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Help", '#', class: "nav-link" %>
+          <%= link_to "Help", help_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "Log in", '#', class: "nav-link" %>
