--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
     <p class="col-md-8 fs-4 mx-auto text-center">
       This is the home page for the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
     </p>
-    <%= link_to "Sign up now!", "#", class: "btn btn-primary btn-lg" %>
+    <%= link_to "Sign up now!", signup_path, class: "btn btn-primary btn-lg" %>
 </div>
 
 <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200"), "https://rubyonrails.org/" %>
