--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -41,6 +41,8 @@ textarea {
 footer {
   margin-top: 45px;
   padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
   a {
